--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签：</label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="标签">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="标签" autocomplete="off">
                 </div>
                 <div class="container-fluid">
                     <div class="row">
