--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
     <!--    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
 </head>
 
+<!--登陆完成以后，关闭登录的窗口-->
 <script type="application/javascript">
     window.onload = function () {
         let closable = window.localStorage.getItem("closable");
