--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="/js/jquery-3.3.1.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/testProject.js" type="application/javascript"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/testProject.css">
@@ -32,8 +33,30 @@
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签：</label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="标签" autocomplete="off">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="标签"
+                           autocomplete="off"
+                           onfocus="showTags()">
                 </div>
+
+                <div class="question-tagCategory" style="display: none;">
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" th:each="category:${tags}">
+                            <a th:href="${'#' + category.getCategoryName()}" aria-controls="home" role="tab" data-toggle="tab"
+                               th:text="${category.getCategoryName()}"
+                               th:data-tag="${category.getCategoryName()}"></a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane" th:id="${category.getCategoryName()}" th:each="category:${tags}">
+                            <span class="label label-info" th:each="tagName: ${category.tags}">
+                                <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
+                                      th:text="${tagName}"
+                                      th:data-tag="${tagName}"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="container-fluid">
                     <div class="row">
                         <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"
