优化标签和个人页面

--- a/src/main/resources/static/css/testProject.css
+++ b/src/main/resources/static/css/testProject.css
@@ -110,5 +110,7 @@ html, body {
 }
 
 .question-tagCategory .label-info {
-    margin-right: 7px;
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
 }
