--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -38,6 +38,7 @@
                            onfocus="showTags()">
                 </div>
 
+                <!--触发showtags()方法会展示标签-->
                 <div class="question-tagCategory" style="display: none;">
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" th:each="category, stat:${tags}"
