--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -39,7 +39,7 @@
                                     </div>
                                     <div class="modal-body" style="text-align:center">
                                         <a href="https://github.com/login/oauth/authorize?client_id=e6dedd08826359276765&redirect_uri=http://localhost:8887/callback&scope=user&state=1">
-                                            <img src="https://www.mawen.co/images/github.png" alt="">
+                                            <img src="/images/github.jpg" height="50px" width="50px" alt="">
                                         </a>
                                         <a href="http://openapi.baidu.com/oauth/2.0/authorize?response_type=code&client_id=SmzQr4CAxTazikFlwnfCGvmzFLSzlIXL&redirect_uri=http://localhost:8887/baiducallback&scope=basic,netdisk&display=page&qrcode=1">
                                             <img src="/images/baidu.jpg" height="50px" width="50px" alt="">
@@ -52,6 +52,7 @@
                             </div>
                         </div>
                     </li>
+                    <li th:if="${session.user} != null"><a href="/profile/replies">通知<span class="badge" th:text="${session.unreadCount}"></span></a></li>
                     <li th:unless="${session.user} == null" class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
