--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,8 +40,8 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading"><a th:href="@{'/questionDetail/' + ${question.id}}"
-                           th:text="${question.title}"></a></h4>
-<!--                    <span th:text="${question.description}"></span><br>-->
+                                                 th:text="${question.title}"></a></h4>
+                    <!--<span th:text="${question.description}"></span><br>-->
                     <span class="comment" id="comment">
                         <span th:text="${question.commentCount}"></span><span>个回复</span>
                         <span th:text="${question.viewCount}"></span><span>次浏览·</span>
@@ -49,7 +49,6 @@
                     </span>
                 </div>
             </div>
-
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>热点话题</h3>
@@ -60,23 +59,23 @@
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li>
-                <a th:href="@{/(page=1)}" aria-label="Previous" th:if="${pagination.isShowFirstPage()}">
+                <a th:href="@{/(page=1, search = ${search})}" aria-label="Previous" th:if="${pagination.isShowFirstPage()}">
                     <span aria-hidden="true">&lt;&lt;</span>
                 </a>
-                <a th:href="@{/(page=${pagination.currentPage}-1)}" aria-label="Previous"
+                <a th:href="@{/(page=${pagination.currentPage}-1, search = ${search})}" aria-label="Previous"
                    th:if="${pagination.isShowPrevious()}">
                     <span aria-hidden="true">&lt;</span>
                 </a>
             </li>
             <li th:each="page:${pagination.pages}" th:class="${pagination.currentPage == page}?'active':''">
-                <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                <a th:href="@{/(page=${page}, search = ${search})}" th:text="${page}"></a>
             </li>
             <li>
-                <a th:href="@{/(page=${pagination.currentPage}+1)}" aria-label="Next"
+                <a th:href="@{/(page=${pagination.currentPage}+1, search = ${search})}" aria-label="Next"
                    th:if="${pagination.isShowNext()}">
                     <span aria-hidden="true">&gt;</span>
                 </a>
-                <a th:href="@{/(page=${pagination.totalNumber})}" aria-label="Next"
+                <a th:href="@{/(page=${pagination.totalNumber}, search = ${search})}" aria-label="Next"
                    th:if="${pagination.isShowLastPage()}">
                     <span aria-hidden="true">&gt;&gt;</span>
                 </a>
@@ -84,6 +83,6 @@
         </ul>
     </nav>
 </div>
-
+<div th:insert="footer :: footer"></div>
 </body>
 </html>
