--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -16,10 +16,10 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" action="/">
                     <div class="form-group">
                         <label>
-                            <input type="text" class="form-control" placeholder="搜索问题">
+                            <input type="text" class="form-control" name="search" placeholder="搜索问题" th:value="${search}">
                         </label>
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
